// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimerMachine renders correctly 1`] = `
<React.Fragment>
  00:00:10.000
</React.Fragment>
`;

exports[`TimerMachine renders custom timer format 1`] = `
<React.Fragment>
  1 min 10 seconds
</React.Fragment>
`;
